fixed overflow bug on landing

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 }
 body {
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
@@ -73,6 +73,7 @@ header.fullscreen-landing {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   background-image: linear-gradient(rgba(34, 84, 112, 0.85), rgba(34, 84, 112, 0.85)), url('../img/background.jpeg');
   background-size: cover;
   background-position: center;
