--- a/less/landing.less
+++ b/less/landing.less
@@ -6,6 +6,7 @@ header.fullscreen-landing {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   background-image: linear-gradient(
       rgba(34, 84, 112, 0.85),
       rgba(34, 84, 112, 0.85)
